fixtures/error/retrieveFiltered_notFound.js
module.exports = {
    statusCode: 404,
    detail: 'No songs found'
  };
  